# prisma

./: CITATION.cff  README.md
configs/: configs
prisma/: CMakeLists.txt  autotuner.cpp  autotuner.h  client.cpp  configs.cpp  logger.cpp  main.cpp  prisma.cpp  prisma.h
pytorch_integration/: README.md  imagenet_execution_example.py  lenet_pytorch_model.py
pytorch_integration/binding_build/: .appveyor.yml  .travis.yml  CMakeLists.txt  setup.py
pytorch_integration/binding_build/conda.recipe/: meta.yaml
pytorch_integration/binding_build/src/: client.h  configs.h  file_content.cpp  file_content.h  file_info.cpp  file_info.h  logger.h  module_binding.cpp  profiler.cpp  profiler.h  server.cpp  server.h
pytorch_integration/custom_classes/: datasets.py  samplers.py
pytorch_integration/custom_classes/updated_data/: dataloader.py
tensorflow_integration/: README.md  imagenet-preprocessing-example.py
